# trademgen

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.md  TrademgenConfig.cmake.in  autogen.sh  configure.ac  setup.py  trademgen-config-python.cmake.in  trademgen-config.cmake.in  trademgen.pc.in  trademgen.spec
config/: project_config_embeddable.cmake
doc/: CMakeLists.txt  doxygen_html.cfg.in
doc/images/: trademgen_icon.ppm  trademgen_logo.xcf
doc/local/: authors.doc  documentation.doc  features.doc  help_wanted.doc  howto_release.doc  index.doc  installation.doc  linking.doc  test.doc  trademgen_footer.html  trademgen_header.html  users_guide.doc  verification.doc
doc/sequential_generation/: .gitignore  Makefile  amadeus.sty  sequential_event_generation.tex  unif.bib
man/: CMakeLists.txt  doxygen_man1.cfg.in  doxygen_man3.cfg.in  pytrademgen.doc  trademgen-config.doc  trademgen-library.doc  trademgen.doc  trademgen_drawBookingArrivals.doc  trademgen_extractBookingRequests.doc  trademgen_generateDemand.doc  trademgen_with_db.doc
study_001/main/trademgen/: TRADEMGEN_Service.hpp
study_001/main/trademgen/basic/: BasConst.cpp  BasParserTypes.hpp  (+3 more)
test/: CMakeLists.txt  Makefile.am  README
test/math/R/: plotECDF.r
test/math/boost_math/: .gitignore  README
test/math/gnuplot/: README  gplot_1d_order_statistic_01.gplot
test/math/mathgl/: README  mgl_1d_01.mgl  mgl_1d_order_statistic_01.mgl  mgl_2d_scatter_random.mgl
test/math/python/: plotECDF.py  plotECDF_scikits.py
test/sequential_generation/: CMakeLists.txt  Makefile.am  RandomDistributionTestSuite.cpp  RandomManager.cpp  SimulateTestSuite.cpp  plotutils.cpp  random_order_stats.cpp  sources.mk
test/trademgen/: CMakeLists.txt  DemandGenerationTestSuite.cpp
tools/: drawBookingArrivals.py  extractBookingRequests.sh
trademgen/: .gitignore  CMakeLists.txt  Makefile.am  TRADEMGEN_Service.hpp  TRADEMGEN_Types.hpp  configure.ac
trademgen/basic/: BasChronometer.cpp  BasChronometer.hpp  BasConst.cpp  BasConst_DemandGeneration.hpp  BasConst_TRADEMGEN_Service.hpp  CategoricalAttributeLite.hpp  ContinuousAttribute.hpp  ContinuousAttributeLite.hpp  DemandCharacteristics.cpp  DemandCharacteristics.hpp  DemandDistribution.cpp  DemandDistribution.hpp  sources.mk
trademgen/batches/: CMakeLists.txt  Makefile.am  sources.mk  trademgen.cpp  trademgen_generateDemand.cpp  trademgen_with_db.cpp
trademgen/bom/: BomDisplay.cpp  BomDisplay.hpp  DemandStream.cpp  DemandStream.hpp  DemandStruct.cpp  DemandStruct.hpp  sources.mk
trademgen/command/: DBManager.cpp  DBManager.hpp  DemandManager.cpp  DemandManager.hpp  DemandParser.cpp  DemandParser.hpp  DemandParserHelper.cpp  DemandParserHelper.hpp  SociSessionManager.cpp  SociSessionManager.hpp  sources.mk
trademgen/config/: Makefile.am
trademgen/core/: Makefile.am  sources.mk
trademgen/dbadaptor/: DbaAbstract.cpp  DbaAbstract.hpp  Makefile.am  sources.mk
trademgen/factory/: FacBomAbstract.cpp  FacBomAbstract.hpp  FacForecastServiceContext.cpp  FacForecastServiceContext.hpp  FacServiceAbstract.cpp  FacServiceAbstract.hpp  FacSupervisor.cpp  FacSupervisor.hpp  FacTrademgenServiceContext.hpp  sources.mk
trademgen/python/: Makefile.am  __init__.py  pytrademgen.cpp  pytrademgen.in  pytrademgen.py  sources.mk  trademgen_drawBookingArrivals.in
trademgen/service/: Makefile.am  ServiceAbstract.cpp  ServiceAbstract.hpp  TRADEMGEN_Service.cpp  TRADEMGEN_ServiceContext.cpp  TRADEMGEN_ServiceContext.hpp  sources.mk
trademgen/test/: BasTypes.hpp  CategoricalAttribute.cpp  CategoricalAttribute.hpp  EventStream.cpp  EventStream.hpp  Makefile  Makefile.am  RandomGeneration.cpp  RandomGeneration.hpp  test.cpp
trademgen/test/trademgen/: BasConst.hpp  BasTypes.hpp  CategoricalAttribute.cpp  CategoricalAttribute.hpp  ContinuousAttribute.hpp  DemandCharacteristics.cpp  DemandCharacteristics.hpp  DemandGenerationTestSuite.cpp  DemandStream.cpp  DemandStream.hpp  EventQueue.cpp  EventQueue.hpp  EventStream.cpp  EventStream.hpp  EventStruct.cpp  EventStruct.hpp  Makefile.am  RandomGeneration.cpp  RandomGeneration.hpp  RandomGenerationContext.cpp  RandomGenerationContext.hpp  Request.cpp  Request.hpp  generateEvents.cpp
trademgen/tools/: pytrademgen_drawBookingArrivals.in  trademgen_drawBookingArrivals.in  trademgen_extractBookingRequests.in  trademgen_extractBookingRequests.sh.in
trademgen/trademgen/: Makefile.am  TRADEMGEN_Service.hpp  TRADEMGEN_Types.hpp
trademgen/trademgen/basic/: BasConst.cpp  BasParserTypes.hpp  CategoricalAttributeLite.hpp  ChannelCode.cpp  ChannelCode.hpp  ChannelCodeTypes.hpp  ContinuousAttributeLite.hpp  DTDTypes.hpp  DemandCharacteristicTypes.hpp  DemandCharacteristics.cpp  DemandCharacteristics.hpp  DictionaryManager.cpp  DictionaryManager.hpp  FFCode.cpp  FFCode.hpp  FFCodeTypes.hpp  PosCodeTypes.hpp  PrefDepTimeTypes.hpp  RandomGeneration.hpp  StayDurationTypes.hpp  TimeValueTypes.hpp  TripCode.cpp  TripCode.hpp  TripCodeTypes.hpp  WTPTypes.hpp  sources.mk
trademgen/trademgen/batches/: Makefile.am  trademgen.cpp  trademgen_with_db.cpp
trademgen/trademgen/bom/: BomManager.cpp  DemandStream.cpp  DemandStream.hpp  DemandStreamTypes.hpp  DemandStruct.cpp  DemandStruct.hpp  sources.mk
trademgen/trademgen/command/: DBManager.cpp  DBManager.hpp  DemandGenerator.cpp  DemandGenerator.hpp  DemandManager.cpp  DemandManager.hpp  DemandParser.cpp  DemandParser.hpp  DemandParserHelper.cpp  DemandParserHelper.hpp  Makefile.am  SociSessionManager.cpp  SociSessionManager.hpp  sources.mk
trademgen/trademgen/config/: Makefile.am
trademgen/trademgen/core/: Makefile.am
trademgen/trademgen/dbadaptor/: Makefile.am
trademgen/trademgen/factory/: FacDemandStream.cpp  FacDemandStream.hpp  FacSupervisor.cpp  FacSupervisor.hpp  FacTrademgenServiceContext.cpp  sources.mk
trademgen/trademgen/python/: Makefile.am  pytrademgen.cpp  pytrademgen.py
trademgen/trademgen/service/: Logger.cpp  Logger.hpp  Makefile.am  TRADEMGEN_Service.cpp  TRADEMGEN_ServiceContext.cpp  TRADEMGEN_ServiceContext.hpp
trademgen/ui/cmdline/: trademgen.cpp
(+6 files in other folders)
